Add an optional OTLP exporter
